# theme-app

./: Cargo.toml  README.md  run.sh
src/: lib.rs  main.rs  prelude.rs
src/application/: app.rs  app_delegate.rs  controller.rs  mod.rs  nav_bar.rs  nav_controller.rs  theme.rs
src/controllers/: builder.rs  editor.rs  home.rs  mod.rs  notify.rs  profile.rs  settings.rs
src/utils/: layout.rs  mod.rs
temp/theme-fox/: Cargo.toml
